--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Name & Username Generator</title>
+  <meta name="google-site-verification" content="vgxx2mTJDy861vQIZPr4VVHQ2DiNt5Wa_pLk8cFH5gE" />
   <meta name="description" content="Generate names & unique-looking usernames fast." />
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
